# MycoPilot

./: .dockerignore  .gitignore  Dockerfile  README_DEPLOYMENT.md  backup.sh  cleanup.cmd  docker-compose.yml
.agents/skills/memory-bank/: .coveragerc  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SECURITY_AUDIT_REPORT.md  SKILL.md  install.sh  pyproject.toml  uninstall.sh
.agents/skills/memory-bank/.memory-bank/: .mb-config  RULES.md  backlog.md  checklist.md  index.json  lessons.md  progress.md  research.md  roadmap.md  rules-profile.json  status.md  traceability.md
.agents/skills/memory-bank/adapters/: _contract.sh  _framework.sh  _lib_agents_md.sh  cline.sh  codex.sh  cursor.sh  git-hooks-fallback.sh  kilo.sh  opencode.sh  pi.sh  pi_graph_rag_extension.ts  windsurf.sh
.agents/skills/memory-bank/agents/: mb-analyst.md  mb-android.md  mb-architect.md  mb-backend.md  mb-codebase-mapper.md  mb-developer.md  mb-devops.md  mb-doctor.md  mb-frontend.md  mb-ios.md  mb-manager.md  mb-qa.md  mb-reviewer.md  mb-rules-enforcer.md  mb-test-runner.md  plan-verifier.md
.agents/skills/memory-bank/codebase/: map-codebase.md
.agents/skills/memory-bank/commands/: adr.md  api-contract.md  catchup.md  changelog.md  commit.md  config.md  contract.md  db-migration.md  discuss.md  doc.md  done.md  mb.md  observability.md  plan.md  pr.md  profile.md  refactor.md  review.md  roadmap-sync.md  sdd.md  security-review.md  start.md  test.md  traceability-gen.md  work.md
.agents/skills/memory-bank/docs/: MIGRATION-install-v1-v2.md  MIGRATION-v1-v2.md  MIGRATION-v3-v3.1.md  README.md  cross-agent-setup.md  i18n.md  install.md  release-process.md  repo-migration.md  rule-profiles.md
.agents/skills/memory-bank/hooks/: _skill_root.sh  block-dangerous.sh  file-change-log.sh  mb-compact-reminder.sh  mb-context-slim-pre-agent.sh  mb-ears-pre-write.sh  mb-plan-sync-post-write.sh  mb-protected-paths-guard.sh  mb-session-start-context.sh  mb-sprint-context-guard.sh  session-end-autosave.sh
.agents/skills/memory-bank/memory_bank_skill/: __init__.py  __main__.py  _bundle.py  _io.py  _texttools.py  cli.py  rules_profile.py
.agents/skills/memory-bank/references/: adapter-manifest-schema.md  claude-md-template.md  command-template.md  design-principles.md  hooks.md  metadata.md  pipeline.default.yaml  planning-and-verification.md  rules-profile.schema.md  structure.md  tags-vocabulary.md  templates.md  workflow.md
.agents/skills/memory-bank/rules/: CLAUDE-GLOBAL.md  RULES.md
.agents/skills/memory-bank/scripts/: __init__.py  _lib.sh  mb-adr.sh  mb-auto-commit.sh  mb-checklist-prune.sh  mb-code-context.py  mb-codegraph.py  mb-compact.sh  mb-config.sh  mb-context-slim.py  mb-context.sh  mb-deps-check.sh  mb-drift.sh  mb-ears-validate.sh  mb-graph-query.py  mb-idea-promote.sh  mb-idea.sh  mb-import.py  mb-index-json.py  mb-index.sh  mb-init-bank.sh  mb-metrics.sh  mb-migrate-structure.sh  mb-migrate-v2.sh  mb-note.sh  mb-pipeline-validate.sh  mb-pipeline.sh  mb-plan-done.sh  mb-plan-sync.sh  mb-plan.sh  mb-profile.sh  mb-req-next-id.sh  mb-reviewer-resolve.sh  mb-roadmap-sync.sh  mb-rules-check.sh  mb-sdd.sh  mb-search.sh  mb-session-spend.sh  mb-spec-tasks-migrate.sh  mb-spec-validate.sh  (+19 more)
.agents/skills/memory-bank/settings/: hooks.json  merge-hooks.py
.agents/skills/memory-bank/site/: app.js  index.html  styles.css
(+458 files in other folders)
