[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "memory-bank-skill"
dynamic = ["version"]
description = "Universal long-term project memory + dev toolkit for AI coding clients (Claude Code, Cursor, Windsurf, Cline, Kilo, OpenCode, Codex, Pi Code)"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
  { name = "Anton Ivanov", email = "ruzaliasib1705@gmail.com" }
]
keywords = ["memory-bank", "claude-code", "cursor", "ai-coding", "dev-tools", "llm-memory"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Operating System :: MacOS",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development",
  "Topic :: Software Development :: Documentation",
]
dependencies = []

[project.optional-dependencies]
codegraph = [
  "tree-sitter>=0.21",
  "tree-sitter-python>=0.21",
  "tree-sitter-go>=0.21",
  "tree-sitter-javascript>=0.21",
  "tree-sitter-typescript>=0.21",
  "tree-sitter-rust>=0.21",
  "tree-sitter-java>=0.21",
]
yaml = ["PyYAML>=6.0"]
dev = ["pytest>=7", "pytest-cov>=4", "PyYAML>=6.0", "ruff>=0.5"]

[project.scripts]
memory-bank = "memory_bank_skill.cli:main"

[project.urls]
Homepage = "https://fockus.github.io/skill-memory-bank/"
Repository = "https://github.com/fockus/skill-memory-bank"
Issues = "https://github.com/fockus/skill-memory-bank/issues"
Changelog = "https://github.com/fockus/skill-memory-bank/blob/main/CHANGELOG.md"

# ═══ Hatch build configuration ═══

[tool.hatch.version]
path = "VERSION"
pattern = "^(?P<version>.+)$"

[tool.hatch.build]
include = [
  "memory_bank_skill/**/*.py",
  "install.sh",
  "uninstall.sh",
  "VERSION",
  "SKILL.md",
  "CHANGELOG.md",
  "README.md",
  "adapters/*.sh",
  "agents/*.md",
  "commands/*.md",
  "hooks/*.sh",
  "rules/*.md",
  "scripts/*.sh",
  "scripts/*.py",
  "references/*.md",
  "settings/*.json",
  "settings/*.py",
  "docs/*.md",
]

[tool.hatch.build.targets.wheel]
packages = ["memory_bank_skill"]

[tool.hatch.build.targets.wheel.shared-data]
"install.sh" = "share/memory-bank-skill/install.sh"
"uninstall.sh" = "share/memory-bank-skill/uninstall.sh"
"VERSION" = "share/memory-bank-skill/VERSION"
"SKILL.md" = "share/memory-bank-skill/SKILL.md"
"adapters" = "share/memory-bank-skill/adapters"
"agents" = "share/memory-bank-skill/agents"
"commands" = "share/memory-bank-skill/commands"
"hooks" = "share/memory-bank-skill/hooks"
"rules" = "share/memory-bank-skill/rules"
"scripts" = "share/memory-bank-skill/scripts"
"references" = "share/memory-bank-skill/references"
"settings" = "share/memory-bank-skill/settings"

[tool.hatch.build.targets.sdist]
include = [
  "/memory_bank_skill",
  "/install.sh",
  "/uninstall.sh",
  "/VERSION",
  "/SKILL.md",
  "/README.md",
  "/CHANGELOG.md",
  "/LICENSE",
  "/adapters",
  "/agents",
  "/commands",
  "/hooks",
  "/rules",
  "/scripts",
  "/references",
  "/settings",
  "/docs",
  "/pyproject.toml",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E501"]  # line-length handled by formatter
